--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-psycopg2 = "*"
-crispy-bootstrap5 = "*"
+psycopg2 = "==2.9.9"
+crispy-bootstrap5 = "==2023.10"
 django = "==4.2.7"
-rabbitmq = "*"
-celery = "*"
+pika = "*"
+rabbitmq-server = "*"
+celery = "==5.3.6"
+djangorestframework = "==3.14.0"
+django-crispy-forms = "==2.1"
+pillow = "==10.2.0"
+gunicorn = "==20.1.0"
+django-environ = "*"
+psycopg2-binary = "==2.9.2"
 
 [dev-packages]
 
